# ai-sweatshop

./: .gitignore  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  index.html  marketplace.json  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
ai-sweatshop/.claude-plugin/: plugin.json
crates/ledger/: Cargo.toml
crates/ledger/src/: chain.rs  db.rs  economy.rs  main.rs  types.rs
docs/superpowers/plans/: 2026-04-09-management-dashboard.md
docs/superpowers/specs/: 2026-04-09-management-dashboard-design.md
server/: bridge.mjs  mcp.mjs
src/: App.tsx  index.css
src/agents/: events.ts  mockData.ts  store.ts  types.ts
src/furniture/: placement.ts  types.ts
src/hooks/: useAgentSocket.ts
src/office/: BuildOverlay.tsx  CloneEffect.tsx  FurnitureItem.tsx  FurnitureLayer.tsx  OfficeCanvas.tsx  OfficeTiles.tsx  SkillLevelUp.tsx  SpeechBubble.tsx  TeamLines.tsx  Worker.tsx
src/sidebar/: AgentCard.tsx  BuildPanel.tsx  ContextMenu.tsx  DispatchInput.tsx  EventFeed.tsx  FurnitureContextMenu.tsx  FurnitureDetail.tsx  ProjectTab.tsx  Sidebar.tsx  StatusBadge.tsx  TabBar.tsx
src/skills/: types.ts
